--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
 
     <article>
       Velkommen til en samling af opgaver og links til gavn for eleverne i 4.a på Kastrupgaardsskolen.<br>
-      Har du fundet et link der mangler på siden eller ønsker at bidrage med indhold kan du skrive til michaelbornholdtnielsen{@}gmail.com.
+      Har du fundet et link der mangler på siden eller ønsker at bidrage med indhold kan du 
+      <ul>
+        <li>skrive til michaelbornholdtnielsen{@}gmail.com</li>
+        <li>Lave pull request til <a href="https://github.com/jarryDk/4a" target="_new">https://github.com/jarryDk/4a</a></li>
+      </ul>
     </article>
 
     <article>
@@ -38,6 +42,14 @@
 
     <article>
       <h2>Matematik</h2>
+
+      <ul>  
+        <li>arbejde med side 90-91, samt breddeopgaverne på side 96-97 i matematikbogen.</li>
+        <li>arbejde med følgende områder på campmat.dk - Multiplikation 2 & 3, Division, Brøker 1 & 2.</li>
+        <li>Man må også gerne arbejde med Supertræner på <a href="matematikfessor.dk" target="_new">matematikfessor.dk</a></li> 
+      </ul>
+
+      <strong>Ekstra : Links</strong>
       <ul>
         <li><a href="https://www.matematikfessor.dk/lessons/index/class:4-klasse-4" target="_new">matematikfessor.dk (kræver uni.login)</a></li>
         <li><a href="https://matematik4-6.gyldendal.dk/" target="_new">matematik4-6.gyldendal.dk (kræver uni.login)</a></li>
@@ -48,6 +60,7 @@
         <li><a href="http://www.chrlund.dk/matematik/mellemtrinnet/" target="_new">chrlund.dk - mellemtrinnet</a></li>
         <li><a href="https://www.gratisskole.dk/?mod=gruppe&id=293" target="_new">4. klasse - Matematik</a></li>
       </ul>
+
     </article>
 
     <article>
@@ -66,7 +79,7 @@
         <li>Hvilke instrumenter spiller? (fx trommer, bas, guitar, klaver, synthesizer, blæsere, strygere, percussion,
           elektronisk fremstillede lyde)</li>
       </ul>
-      Links:
+      Links til opgaven
       <ul>
         <li><a href="https://www.youtube.com/watch?v=Yg8t7oXYQps" target="_new">Bomba Estéreo - To My Love</a></li>
         <li><a href="https://www.youtube.com/watch?v=F3CIbk3At_8" target="_new">M.I.A. - Paper Planes</a></li>
