--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
       <h2>Matematik</h2>
 
       <ul>  
-        <li>arbejde med side 90-91, samt breddeopgaverne på side 96-97 i matematikbogen.</li>
-        <li>arbejde med følgende områder på campmat.dk - Multiplikation 2 & 3, Division, Brøker 1 & 2.</li>
+        <li>Arbejde med side 90-91, samt breddeopgaverne på side 96-97 i matematikbogen.</li>
+        <li>Arbejde med følgende områder på campmat.dk - Multiplikation 2 & 3, Division, Brøker 1 & 2.</li>
         <li>Man må også gerne arbejde med Supertræner på <a href="matematikfessor.dk" target="_new">matematikfessor.dk</a></li> 
       </ul>
 
@@ -89,6 +89,12 @@
         <li><a href="https://www.youtube.com/watch?v=ter0p_iyIxk" target="_new">Wind &amp; Fire - September</a></li>
       </ul>
     </article>
+
+    <article>
+      <h2>Engelsk</h2>
+      Lav "Letter of the day" med mindst 10 ord på engelsk, der starter med E. I kan bruge det dokument, som jeg har lagt op som skabelon, eller lave jeres egen. Husk dato. :-)<br>
+      <a href="https://engelsk.alinea.dk/course/AgHk-grammar-tillaegsord" target="_new">Tillægsord</a> : Skal-opgaver: "Om tillægsord", "Beskriv tegningen", "Jagten på tillægsord: Læs og find tillægsordet i sætningen" og "Jagten på tillægsord: Find tillægsordet" Kan-opgaver: ""Jagten på tillægsord: Find flere tillægsord".
+    </article> 
 
   </div><!-- end .container -->
 
