--- a/index.html
+++ b/index.html
@@ -37,19 +37,21 @@
       <h2>Dansk - Natur/teknik</h2>
       <ul>
         <li><a href="files/oversigt_dansk_4a.pdf" target="_new">oversigt_dansk_4a.pdf</a></li>
+        <li>N/T: Fugleforløb kan genoptages ved adgang til computer. Gå ind på fgl. link og lav forløbet om fugle: <a href="https://danske-dyr.dk/forl%C3%B8b/9/Fugle/" target="_new">Danske dyr forløb om fugle</a></li>
       </ul>
     </article>
 
     <article>
-      <h2>Matematik</h2>
-
+      <h2>Matematik - uge 12</h2>
       <ul>  
         <li>Arbejde med side 90-91, samt breddeopgaverne på side 96-97 i matematikbogen.</li>
         <li>Arbejde med følgende områder på campmat.dk - Multiplikation 2 & 3, Division, Brøker 1 & 2.</li>
         <li>Man må også gerne arbejde med Supertræner på <a href="matematikfessor.dk" target="_new">matematikfessor.dk</a></li> 
       </ul>
+    </article>
 
-      <strong>Ekstra : Links</strong>
+    <article>
+      <h2>Matematik - Links til ekstra materiale</h2>
       <ul>
         <li><a href="https://www.matematikfessor.dk/lessons/index/class:4-klasse-4" target="_new">matematikfessor.dk (kræver uni.login)</a></li>
         <li><a href="https://matematik4-6.gyldendal.dk/" target="_new">matematik4-6.gyldendal.dk (kræver uni.login)</a></li>
@@ -60,8 +62,19 @@
         <li><a href="http://www.chrlund.dk/matematik/mellemtrinnet/" target="_new">chrlund.dk - mellemtrinnet</a></li>
         <li><a href="https://www.gratisskole.dk/?mod=gruppe&id=293" target="_new">4. klasse - Matematik</a></li>
       </ul>
-
     </article>
+
+    <article>
+      <h2>Engelsk - uge 13</h2>
+      Lav "Letter of the day" med mindst 10 ord på engelsk, der starter med <strong>F</strong>. I kan bruge det dokument, som jeg har lagt op som skabelon, eller lave jeres egen. Husk dato. :-)<br>
+      <a href="https://engelsk.alinea.dk/course/AgH4-grammar-stedord" target="_new">Stedord</a>. Skal-opgave: "Introduktion til stedord" og "Træn personlige stedord" i kapitel 1. Kan-opgave: "Om personlige stedord" (lidt svært) i kapitel 1.
+    </article>  
+
+    <article>
+      <h2>Engelsk - uge 12</h2>
+      Lav "Letter of the day" med mindst 10 ord på engelsk, der starter med <strong>E</strong>. I kan bruge det dokument, som jeg har lagt op som skabelon, eller lave jeres egen. Husk dato. :-)<br>
+      <a href="https://engelsk.alinea.dk/course/AgHk-grammar-tillaegsord" target="_new">Tillægsord</a> : Skal-opgaver: "Om tillægsord", "Beskriv tegningen", "Jagten på tillægsord: Læs og find tillægsordet i sætningen" og "Jagten på tillægsord: Find tillægsordet" Kan-opgaver: ""Jagten på tillægsord: Find flere tillægsord".
+    </article> 
 
     <article>
       <h2>Musik</h2>
@@ -89,12 +102,6 @@
         <li><a href="https://www.youtube.com/watch?v=ter0p_iyIxk" target="_new">Wind &amp; Fire - September</a></li>
       </ul>
     </article>
-
-    <article>
-      <h2>Engelsk</h2>
-      Lav "Letter of the day" med mindst 10 ord på engelsk, der starter med E. I kan bruge det dokument, som jeg har lagt op som skabelon, eller lave jeres egen. Husk dato. :-)<br>
-      <a href="https://engelsk.alinea.dk/course/AgHk-grammar-tillaegsord" target="_new">Tillægsord</a> : Skal-opgaver: "Om tillægsord", "Beskriv tegningen", "Jagten på tillægsord: Læs og find tillægsordet i sætningen" og "Jagten på tillægsord: Find tillægsordet" Kan-opgaver: ""Jagten på tillægsord: Find flere tillægsord".
-    </article> 
 
   </div><!-- end .container -->
 
