--- a/index.html
+++ b/index.html
@@ -24,82 +24,165 @@
 
     <h1>4.A - Kastrupgaardsskolen</h1>
 
+    <p>Velkommen til en samling af opgaver og links til gavn for eleverne i 4.a på Kastrupgaardsskolen.</p>
+
+    <div class="row">
+
+      <div class="col">
+
+        <!--
+        <div class="card border-dark mb-3">
+          <div class="card-header">FAG</div>
+          <div class="card-body text-dark">
+            <div class="card-text">
+              <p>Text</p>
+            </div>
+          </div>
+        </div>
+        -->
+
+        <div class="card border-dark mb-3">
+          <div class="card-header text-white bg-info">Dansk - Natur/teknik - uge 12 og 13</div>
+          <div class="card-body text-dark">
+            <div class="card-text">
+              <p><a href="files/oversigt_dansk_4a.pdf" target="_new">oversigt_dansk_4a.pdf</a></p>
+              <p>N/T: Fugleforløb kan genoptages ved adgang til computer. Gå ind på fgl. link og lav forløbet om fugle:
+                <a href="https://danske-dyr.dk/forl%C3%B8b/9/Fugle/" target="_new">Danske dyr forløb om fugle</a></li>
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="card border-dark mb-3">
+          <div class="card-header bg-secondary text-white">Engelsk - uge 13</div>
+          <div class="card-body text-dark">
+            <div class="card-text">
+              <p>Lav "Letter of the day" med mindst 10 ord på engelsk, der starter med <strong>F</strong>. I kan bruge
+                det
+                dokument, som jeg har lagt op som skabelon, eller lave jeres egen. Husk dato. :-)</p>
+              <p>
+                <a href="https://engelsk.alinea.dk/course/AgH4-grammar-stedord" target="_new">Stedord</a>. Skal-opgave:
+                "Introduktion til stedord" og "Træn personlige stedord" i kapitel 1. Kan-opgave: "Om personlige stedord"
+                (lidt
+                svært) i kapitel 1.</p>
+            </div>
+          </div>
+        </div>
+
+      </div><!-- end col -->
+
+      <div class="col">
+
+       
+
+        <div class="card border-dark mb-3">
+          <div class="card-header">Musik</div>
+          <div class="card-body text-dark">
+            <div class="card-text">
+              <p>Hermed opgaver til fjernundervisning i musik. Vi har berørt elementer af populærmusikanalyse i 4. klasse, og
+                derfor vil undervisningen dreje sig herom:
+                Længere nede er der links til seks sange.<br>
+                Til hver sang skal følgende spørgsmål besvares og medbringes i fysisk
+                form, når vi ses igen (minimum fire valgfri sange fra listen SKAL analyseres):</p>
+                <ul>
+                  <li>Hvad er hook'et? (den tekst, lyd eller musik, der gør, at vi husker sangen efter første lyt)</li>
+                  <li>Hvornår hører man hook'et første gang? (skriv tidskode)</li>
+                  <li>Hvornår er der break/breaks? (kort ophold/stop/pause i musikken, inden den fortsætter - skriv tidskode)
+                  </li>
+                  <li>Hvilke gimmicks kan man høre? (specielle lyde/effekter, som vi først opdager efter flere lyt)</li>
+                  <li>Hvornår hører man disse gimmicks? (skriv tidskode)</li>
+                  <li>Hvilke instrumenter spiller? (fx trommer, bas, guitar, klaver, synthesizer, blæsere, strygere,
+                    percussion,
+                    elektronisk fremstillede lyde)</li>
+                </ul>
+                <p>Links til opgaven</p>
+                <ul>
+                  <li><a href="https://www.youtube.com/watch?v=Yg8t7oXYQps" target="_new">Bomba Estéreo - To My Love</a></li>
+                  <li><a href="https://www.youtube.com/watch?v=F3CIbk3At_8" target="_new">M.I.A. - Paper Planes</a></li>
+                  <li><a href="https://www.youtube.com/watch?v=4-TbQnONe_w" target="_new">Billie Eilish - bad guy</a></li>
+                  <li><a href="https://www.youtube.com/watch?v=hu-JryC9aC0" target="_new">Gorillaz - Clint Eastwood</a></li>
+                  <li><a href="https://www.youtube.com/watch?v=8lxs4VIabzA" target="_new">Prince - MusicologyEarth</a></li>
+                  <li><a href="https://www.youtube.com/watch?v=ter0p_iyIxk" target="_new">Wind &amp; Fire - September</a></li>
+                </ul>
+            </div>
+          </div>
+        </div>
+
+      </div><!-- end col -->
+
+    </div> <!-- end row -->
+
+
+    <div class="row">
+
+      <div class="col">
+        <div class="card border-dark mb-3">
+          <div class="card-header text-white bg-primary">Matematik - uge 12</div>
+          <div class="card-body text-dark">
+            <div class="card-text">
+              <p>Arbejde med side 90-91, samt breddeopgaverne på side 96-97 i matematikbogen.</p>
+              <p>Arbejde med følgende områder på campmat.dk - Multiplikation 2 & 3, Division, Brøker 1 & 2.</p>
+              <p>Man må også gerne arbejde med Supertræner på <a href="matematikfessor.dk"
+                  target="_new">matematikfessor.dk</a></p>
+            </div>
+          </div>
+        </div>
+
+        <div class="card border-dark mb-3">
+          <div class="card-header bg-secondary text-white">Engelsk - uge 12</div>
+          <div class="card-body text-dark">
+            <div class="card-text">
+              <p>Lav "Letter of the day" med mindst 10 ord på engelsk, der starter med <strong>E</strong>. I kan bruge
+                det
+                dokument, som jeg har lagt op som skabelon, eller lave jeres egen. Husk dato. :-)</p>
+              <p><a href="https://engelsk.alinea.dk/course/AgHk-grammar-tillaegsord" target="_new">Tillægsord</a> :
+                Skal-opgaver: "Om tillægsord", "Beskriv tegningen", "Jagten på tillægsord: Læs og find tillægsordet i
+                sætningen" og "Jagten på tillægsord: Find tillægsordet" Kan-opgaver: ""Jagten på tillægsord: Find flere
+                tillægsord".</p>
+            </div>
+          </div>
+        </div>
+
+      </div><!-- end col -->
+
+      <div class="col">
+
+        <div class="card border-dark mb-3">
+          <div class="card-header text-white bg-primary">Matematik - Links til ekstra materiale</div>
+          <div class="card-body text-dark">
+            <div class="card-text">
+              <ul>
+                <li><a href="https://www.matematikfessor.dk/lessons/index/class:4-klasse-4" target="_new">matematikfessor.dk
+                    (kræver uni.login)</a></li>
+                <li><a href="https://matematik4-6.gyldendal.dk/" target="_new">matematik4-6.gyldendal.dk (kræver
+                    uni.login)</a></li>
+                <li><a href="https://matematik.alinea.dk/?levels=4._klasse" target="_new">matematik.alinea.dk (kræver
+                    uni.login)</a></li>
+                <li><a href="https://www.duda.dk/opgaver/matematik/mat-b/mat-b.html" target="_new">duda.dk -
+                    Matematikopgaver og øvelser for 4. 5. & 6. klasse</a></li>
+                <li><a href="https://www.sysform.dk/faerdighedsregning/4-klasse" target="_new">sysform.dk - Færdighed 4.
+                    klasse</a></li>
+                <li><a href="http://www.matematikbogen.dk/ExerciseOverview.aspx?level=2" target="_new">matematikbogen.dk -
+                    Færdighed 3. - 4. klasse</a></li>
+                <li><a href="http://www.chrlund.dk/matematik/mellemtrinnet/" target="_new">chrlund.dk - mellemtrinnet</a>
+                </li>
+                <li><a href="https://www.gratisskole.dk/?mod=gruppe&id=293" target="_new">4. klasse - Matematik</a></li>
+              </ul>
+            </div>
+          </div>          
+        </div>
+
+      </div><!-- end col -->
+      
+    </div> <!-- end row -->
+
+
     <article>
-      Velkommen til en samling af opgaver og links til gavn for eleverne i 4.a på Kastrupgaardsskolen.<br>
-      Har du fundet et link der mangler på siden eller ønsker at bidrage med indhold kan du 
+      Har du fundet et link der mangler på siden eller ønsker at bidrage med indhold kan du
       <ul>
         <li>skrive til michaelbornholdtnielsen{@}gmail.com</li>
-        <li>Lave pull request til <a href="https://github.com/jarryDk/4a" target="_new">https://github.com/jarryDk/4a</a></li>
-      </ul>
-    </article>
-
-    <article>
-      <h2>Dansk - Natur/teknik</h2>
-      <ul>
-        <li><a href="files/oversigt_dansk_4a.pdf" target="_new">oversigt_dansk_4a.pdf</a></li>
-        <li>N/T: Fugleforløb kan genoptages ved adgang til computer. Gå ind på fgl. link og lav forløbet om fugle: <a href="https://danske-dyr.dk/forl%C3%B8b/9/Fugle/" target="_new">Danske dyr forløb om fugle</a></li>
-      </ul>
-    </article>
-
-    <article>
-      <h2>Matematik - uge 12</h2>
-      <ul>  
-        <li>Arbejde med side 90-91, samt breddeopgaverne på side 96-97 i matematikbogen.</li>
-        <li>Arbejde med følgende områder på campmat.dk - Multiplikation 2 & 3, Division, Brøker 1 & 2.</li>
-        <li>Man må også gerne arbejde med Supertræner på <a href="matematikfessor.dk" target="_new">matematikfessor.dk</a></li> 
-      </ul>
-    </article>
-
-    <article>
-      <h2>Matematik - Links til ekstra materiale</h2>
-      <ul>
-        <li><a href="https://www.matematikfessor.dk/lessons/index/class:4-klasse-4" target="_new">matematikfessor.dk (kræver uni.login)</a></li>
-        <li><a href="https://matematik4-6.gyldendal.dk/" target="_new">matematik4-6.gyldendal.dk (kræver uni.login)</a></li>
-        <li><a href="https://matematik.alinea.dk/?levels=4._klasse" target="_new">matematik.alinea.dk (kræver uni.login)</a></li>
-        <li><a href="https://www.duda.dk/opgaver/matematik/mat-b/mat-b.html" target="_new">duda.dk - Matematikopgaver og øvelser for 4. 5. & 6. klasse</a></li>
-        <li><a href="https://www.sysform.dk/faerdighedsregning/4-klasse" target="_new">sysform.dk - Færdighed 4. klasse</a></li>
-        <li><a href="http://www.matematikbogen.dk/ExerciseOverview.aspx?level=2" target="_new">matematikbogen.dk - Færdighed 3. - 4. klasse</a></li>
-        <li><a href="http://www.chrlund.dk/matematik/mellemtrinnet/" target="_new">chrlund.dk - mellemtrinnet</a></li>
-        <li><a href="https://www.gratisskole.dk/?mod=gruppe&id=293" target="_new">4. klasse - Matematik</a></li>
-      </ul>
-    </article>
-
-    <article>
-      <h2>Engelsk - uge 13</h2>
-      Lav "Letter of the day" med mindst 10 ord på engelsk, der starter med <strong>F</strong>. I kan bruge det dokument, som jeg har lagt op som skabelon, eller lave jeres egen. Husk dato. :-)<br>
-      <a href="https://engelsk.alinea.dk/course/AgH4-grammar-stedord" target="_new">Stedord</a>. Skal-opgave: "Introduktion til stedord" og "Træn personlige stedord" i kapitel 1. Kan-opgave: "Om personlige stedord" (lidt svært) i kapitel 1.
-    </article>  
-
-    <article>
-      <h2>Engelsk - uge 12</h2>
-      Lav "Letter of the day" med mindst 10 ord på engelsk, der starter med <strong>E</strong>. I kan bruge det dokument, som jeg har lagt op som skabelon, eller lave jeres egen. Husk dato. :-)<br>
-      <a href="https://engelsk.alinea.dk/course/AgHk-grammar-tillaegsord" target="_new">Tillægsord</a> : Skal-opgaver: "Om tillægsord", "Beskriv tegningen", "Jagten på tillægsord: Læs og find tillægsordet i sætningen" og "Jagten på tillægsord: Find tillægsordet" Kan-opgaver: ""Jagten på tillægsord: Find flere tillægsord".
-    </article> 
-
-    <article>
-      <h2>Musik</h2>
-      Hermed opgaver til fjernundervisning i musik. Vi har berørt elementer af populærmusikanalyse i 4. klasse, og
-      derfor vil undervisningen dreje sig herom:
-      Længere nede er der links til seks sange.<br> 
-      Til hver sang skal følgende spørgsmål besvares og medbringes i fysisk
-      form, når vi ses igen (minimum fire valgfri sange fra listen SKAL analyseres):
-      <ul>
-        <li>Hvad er hook'et? (den tekst, lyd eller musik, der gør, at vi husker sangen efter første lyt)</li>
-        <li>Hvornår hører man hook'et første gang? (skriv tidskode)</li>
-        <li>Hvornår er der break/breaks? (kort ophold/stop/pause i musikken, inden den fortsætter - skriv tidskode)</li>
-        <li>Hvilke gimmicks kan man høre? (specielle lyde/effekter, som vi først opdager efter flere lyt)</li>
-        <li>Hvornår hører man disse gimmicks? (skriv tidskode)</li>
-        <li>Hvilke instrumenter spiller? (fx trommer, bas, guitar, klaver, synthesizer, blæsere, strygere, percussion,
-          elektronisk fremstillede lyde)</li>
-      </ul>
-      Links til opgaven
-      <ul>
-        <li><a href="https://www.youtube.com/watch?v=Yg8t7oXYQps" target="_new">Bomba Estéreo - To My Love</a></li>
-        <li><a href="https://www.youtube.com/watch?v=F3CIbk3At_8" target="_new">M.I.A. - Paper Planes</a></li>
-        <li><a href="https://www.youtube.com/watch?v=4-TbQnONe_w" target="_new">Billie Eilish - bad guy</a></li>
-        <li><a href="https://www.youtube.com/watch?v=hu-JryC9aC0" target="_new">Gorillaz - Clint Eastwood</a></li>
-        <li><a href="https://www.youtube.com/watch?v=8lxs4VIabzA" target="_new">Prince - MusicologyEarth</a></li>
-        <li><a href="https://www.youtube.com/watch?v=ter0p_iyIxk" target="_new">Wind &amp; Fire - September</a></li>
+        <li>Lave pull request til <a href="https://github.com/jarryDk/4a"
+            target="_new">https://github.com/jarryDk/4a</a></li>
       </ul>
     </article>
 
