--- a/index.html
+++ b/index.html
@@ -54,6 +54,34 @@
         </div>
 
         <div class="card border-dark mb-3">
+          <div class="card-header text-white bg-primary">Matematik - uge 13</div>
+          <div class="card-body text-dark">
+            <div class="card-text">
+              <p>Mandag<br>
+                1. I skal arbejde med træningsopgaver vedr. data og statistik - <a
+                      href="https://matematik.alinea.dk/course/A6Vg-data-og-statistik/grid/AOzR-traeningsopgaver"
+                      target="_new">træningsopgaver - data og statistik</a><br>
+                2. I skal arbejde med fordybelsesopgaver vedr. data og statistik - <a
+                      href="https://matematik.alinea.dk/course/A6Vg-data-og-statistik/grid/AOFz-tid-til-fordybelse"
+                      target="_new">tid til fordybelse - data og statistik</a><br>
+              </p>
+              <p>Tirsdag<br>
+                I skal spille minigamet de tapre officerer - løberen - <a
+                  href="https://play.skoleskak.dk/game/tapre-officerer/loeber/12" target="_new">tapre officerer -
+                  løber</a>. Prøv både A, B og C. </p>
+              <p>Fredag<br>
+                I skal arbejde med ligninger på campmat - <a
+                  href="https://campmat.alinea.dk/mellemtrin/question/show/nNa84rVu5hGVNgBQVqqStQ"
+                  target="_new">Ligninger 1</a>. Det gælder om at finde ud af, hvad der skal stå på X's plads.
+                Får man lyst til mere, kan man arbejde videre med <a
+                  href="https://campmat.alinea.dk/mellemtrin/question/show/I_HBjZuA5hGVNgBQVqqStQ"
+                  target="_new">Ligninger 2</a>.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="card border-dark mb-3">
           <div class="card-header bg-secondary text-white">Engelsk - uge 13</div>
           <div class="card-body text-dark">
             <div class="card-text">
@@ -73,37 +101,43 @@
 
       <div class="col">
 
-       
+
 
         <div class="card border-dark mb-3">
           <div class="card-header">Musik</div>
           <div class="card-body text-dark">
             <div class="card-text">
-              <p>Hermed opgaver til fjernundervisning i musik. Vi har berørt elementer af populærmusikanalyse i 4. klasse, og
+              <p>Hermed opgaver til fjernundervisning i musik. Vi har berørt elementer af populærmusikanalyse i 4.
+                klasse, og
                 derfor vil undervisningen dreje sig herom:
                 Længere nede er der links til seks sange.<br>
                 Til hver sang skal følgende spørgsmål besvares og medbringes i fysisk
                 form, når vi ses igen (minimum fire valgfri sange fra listen SKAL analyseres):</p>
-                <ul>
-                  <li>Hvad er hook'et? (den tekst, lyd eller musik, der gør, at vi husker sangen efter første lyt)</li>
-                  <li>Hvornår hører man hook'et første gang? (skriv tidskode)</li>
-                  <li>Hvornår er der break/breaks? (kort ophold/stop/pause i musikken, inden den fortsætter - skriv tidskode)
-                  </li>
-                  <li>Hvilke gimmicks kan man høre? (specielle lyde/effekter, som vi først opdager efter flere lyt)</li>
-                  <li>Hvornår hører man disse gimmicks? (skriv tidskode)</li>
-                  <li>Hvilke instrumenter spiller? (fx trommer, bas, guitar, klaver, synthesizer, blæsere, strygere,
-                    percussion,
-                    elektronisk fremstillede lyde)</li>
-                </ul>
-                <p>Links til opgaven</p>
-                <ul>
-                  <li><a href="https://www.youtube.com/watch?v=Yg8t7oXYQps" target="_new">Bomba Estéreo - To My Love</a></li>
-                  <li><a href="https://www.youtube.com/watch?v=F3CIbk3At_8" target="_new">M.I.A. - Paper Planes</a></li>
-                  <li><a href="https://www.youtube.com/watch?v=4-TbQnONe_w" target="_new">Billie Eilish - bad guy</a></li>
-                  <li><a href="https://www.youtube.com/watch?v=hu-JryC9aC0" target="_new">Gorillaz - Clint Eastwood</a></li>
-                  <li><a href="https://www.youtube.com/watch?v=8lxs4VIabzA" target="_new">Prince - MusicologyEarth</a></li>
-                  <li><a href="https://www.youtube.com/watch?v=ter0p_iyIxk" target="_new">Wind &amp; Fire - September</a></li>
-                </ul>
+              <ul>
+                <li>Hvad er hook'et? (den tekst, lyd eller musik, der gør, at vi husker sangen efter første lyt)</li>
+                <li>Hvornår hører man hook'et første gang? (skriv tidskode)</li>
+                <li>Hvornår er der break/breaks? (kort ophold/stop/pause i musikken, inden den fortsætter - skriv
+                  tidskode)
+                </li>
+                <li>Hvilke gimmicks kan man høre? (specielle lyde/effekter, som vi først opdager efter flere lyt)</li>
+                <li>Hvornår hører man disse gimmicks? (skriv tidskode)</li>
+                <li>Hvilke instrumenter spiller? (fx trommer, bas, guitar, klaver, synthesizer, blæsere, strygere,
+                  percussion,
+                  elektronisk fremstillede lyde)</li>
+              </ul>
+              <p>Links til opgaven</p>
+              <ul>
+                <li><a href="https://www.youtube.com/watch?v=Yg8t7oXYQps" target="_new">Bomba Estéreo - To My Love</a>
+                </li>
+                <li><a href="https://www.youtube.com/watch?v=F3CIbk3At_8" target="_new">M.I.A. - Paper Planes</a></li>
+                <li><a href="https://www.youtube.com/watch?v=4-TbQnONe_w" target="_new">Billie Eilish - bad guy</a></li>
+                <li><a href="https://www.youtube.com/watch?v=hu-JryC9aC0" target="_new">Gorillaz - Clint Eastwood</a>
+                </li>
+                <li><a href="https://www.youtube.com/watch?v=8lxs4VIabzA" target="_new">Prince - MusicologyEarth</a>
+                </li>
+                <li><a href="https://www.youtube.com/watch?v=ter0p_iyIxk" target="_new">Wind &amp; Fire - September</a>
+                </li>
+              </ul>
             </div>
           </div>
         </div>
@@ -152,7 +186,8 @@
           <div class="card-body text-dark">
             <div class="card-text">
               <ul>
-                <li><a href="https://www.matematikfessor.dk/lessons/index/class:4-klasse-4" target="_new">matematikfessor.dk
+                <li><a href="https://www.matematikfessor.dk/lessons/index/class:4-klasse-4"
+                    target="_new">matematikfessor.dk
                     (kræver uni.login)</a></li>
                 <li><a href="https://matematik4-6.gyldendal.dk/" target="_new">matematik4-6.gyldendal.dk (kræver
                     uni.login)</a></li>
@@ -162,18 +197,20 @@
                     Matematikopgaver og øvelser for 4. 5. & 6. klasse</a></li>
                 <li><a href="https://www.sysform.dk/faerdighedsregning/4-klasse" target="_new">sysform.dk - Færdighed 4.
                     klasse</a></li>
-                <li><a href="http://www.matematikbogen.dk/ExerciseOverview.aspx?level=2" target="_new">matematikbogen.dk -
+                <li><a href="http://www.matematikbogen.dk/ExerciseOverview.aspx?level=2" target="_new">matematikbogen.dk
+                    -
                     Færdighed 3. - 4. klasse</a></li>
-                <li><a href="http://www.chrlund.dk/matematik/mellemtrinnet/" target="_new">chrlund.dk - mellemtrinnet</a>
+                <li><a href="http://www.chrlund.dk/matematik/mellemtrinnet/" target="_new">chrlund.dk -
+                    mellemtrinnet</a>
                 </li>
                 <li><a href="https://www.gratisskole.dk/?mod=gruppe&id=293" target="_new">4. klasse - Matematik</a></li>
               </ul>
             </div>
-          </div>          
+          </div>
         </div>
 
       </div><!-- end col -->
-      
+
     </div> <!-- end row -->
 
 
