Fix link to https://matematikfessor.dk/

--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
             <div class="card-text">
               <p>Arbejde med side 90-91, samt breddeopgaverne på side 96-97 i matematikbogen.</p>
               <p>Arbejde med følgende områder på campmat.dk - Multiplikation 2 & 3, Division, Brøker 1 & 2.</p>
-              <p>Man må også gerne arbejde med Supertræner på <a href="matematikfessor.dk"
+              <p>Man må også gerne arbejde med Supertræner på <a href="https://matematikfessor.dk/"
                   target="_new">matematikfessor.dk</a></p>
             </div>
           </div>
