Tilføjet mat uge 14

--- a/index.html
+++ b/index.html
@@ -69,6 +69,40 @@
         </div>
 
         <div class="card border-dark mb-3">
+          <div class="card-header text-white bg-primary">Matematik - uge 14</div>
+          <div class="card-body text-dark">
+            <div class="card-text">
+              <p>Mandag<br>
+                1. Arbejd med "regnetegn" på Camp mat - (link: <a
+                  href="https://campmat.alinea.dk/mellemtrin/question/show/pAgbbThl5hGVNgBQVqqStQ"
+                  target="_new">Regnetegn</a><br>
+                2. Arbejd med med supertræner på <a href="https://matematikfessor.dk/"
+                  target="_new">matematikfessor.dk</a><br>
+                3. Har man tid og overskud, kan man træne gangetabeller her: (link: <a
+                  href="https://gangetabel.dk/?x1=1" target="_new">Gangetabel</a> )
+              </p>
+              <p>Tirsdag<br>
+                1. Arbejd med lektie inde på <a href="https://matematikfessor.dk/" target="_new">matematikfessor.dk</a>)<br>
+                2. Prøv at løse følgende gåde:<br>
+                "Fire mænd sidder i bunden af en mine, der er ved at styrte sammen. Der er kun ilt tilbage i minen til
+                17 minutter.
+                Friheden venter på den anden side af en mørk og snæver minegang. De fire mænd kan ikke kravle lige
+                hurtigt gennem gangen.
+                En kan gøre det på blot 1 minut, de andre er henholdvis 2 minutter, 5 minutter og 10 minutter om det. De
+                har kun 1 lommelygte, og
+                den er nødvendig for at komme igennem minegangen. Der kan kun være 2 mænd i minegangen ad gangen.
+                Hvordan kommer de ud?"<br>
+                Løsningen vil blive afsløret på fredag til "klassens tid".
+              </p>
+              <p>Fredag<br>
+                Praktisk opgave - nærmere info følger
+              </p>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="card border-dark mb-3">
           <div class="card-header text-white bg-success">Natur/teknik - uge 14</div>
           <div class="card-body text-dark">
             <div class="card-text">
@@ -132,7 +166,8 @@
                 </ul>
               </p>
               <p>
-                Skriv eller ring til  Salina, hvis I er i tvivl om, hvordan I skal aflevere på MinUddannelse. Salinas nummer er
+                Skriv eller ring til Salina, hvis I er i tvivl om, hvordan I skal aflevere på MinUddannelse. Salinas
+                nummer er
                 42329905.
               </p>
               <p>Synes du, at du har for lidt engelsk i hverdagen? Så kan Salina anbefale:
@@ -157,7 +192,8 @@
               <p>Nu har I beskæftiget jer med hook, break og gimmick som en del af musikanalyse af populærmusik.
                 Vi udvider i uge 14 og frem til påskeferien med at lære om tre af populærmusikkens formdele: intro, vers
                 og omkvæd.
-                Sasha har vedhæftet et lille slideshow, som Sasha håber, I kan få til at virke. Hvis det ikke virker, så giv
+                Sasha har vedhæftet et lille slideshow, som Sasha håber, I kan få til at virke. Hvis det ikke virker, så
+                giv
                 Sasha besked
                 - så finder vi en løsning.</p>
               <p>Der er intet krav om aflevering, men har man lyst til at skrive svarene på spørgsmålene til mig, så må
