--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                   href="https://gangetabel.dk/?x1=1" target="_new">Gangetabel</a> )
               </p>
               <p>Tirsdag<br>
-                1. Arbejd med lektie inde på <a href="https://matematikfessor.dk/" target="_new">matematikfessor.dk</a>)<br>
+                1. Arbejd med lektie inde på <a href="https://matematikfessor.dk/" target="_new">matematikfessor.dk</a><br>
                 2. Prøv at løse følgende gåde:<br>
                 "Fire mænd sidder i bunden af en mine, der er ved at styrte sammen. Der er kun ilt tilbage i minen til
                 17 minutter.
