--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
           <div class="card-body text-dark">
             <div class="card-text">
               <p>Mandag<br>
-                1. Arbejd med "regnetegn" på Camp mat - (link: <a
+                1. Arbejd med "regnetegn" på Camp mat - <a
                   href="https://campmat.alinea.dk/mellemtrin/question/show/pAgbbThl5hGVNgBQVqqStQ"
                   target="_new">Regnetegn</a><br>
                 2. Arbejd med med supertræner på <a href="https://matematikfessor.dk/"
                   target="_new">matematikfessor.dk</a><br>
-                3. Har man tid og overskud, kan man træne gangetabeller her: (link: <a
-                  href="https://gangetabel.dk/?x1=1" target="_new">Gangetabel</a> )
-              </p>
+                3. Har man tid og overskud, kan man træne <a
+                  href="https://gangetabel.dk/?x1=1" target="_new">Gangetabel</a>
+                </p>
               <p>Tirsdag<br>
                 1. Arbejd med lektie inde på <a href="https://matematikfessor.dk/" target="_new">matematikfessor.dk</a><br>
                 2. Prøv at løse følgende gåde:<br>
