--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
           <div class="card-header bg-secondary text-white">Engelsk - uge 14</div>
           <div class="card-body text-dark">
             <div class="card-text">
-              <p>Lav "Letter of the day" med mindst 10 ord på engelsk, der starter med <strong>F</strong>.</p>
+              <p>Lav "Letter of the day" med mindst 10 ord på engelsk, der starter med <strong>G</strong>.</p>
               <p>
                 Kapitel 1 og 2 i forløbet After School på Alinea.
               </p>
