--- a/index.html
+++ b/index.html
@@ -31,11 +31,19 @@
         </div>
         -->
 
+  <!-- NAVBAR-->
+  <nav class="navbar navbar-expand-lg py-3 navbar-dark bg-dark shadow-sm">
+    <div class="container">
+      <a href="#" class="navbar-brand">
+        <span class="text-uppercase font-weight-bold">4. A - Kastrupgaardsskolen</span>                
+      </a>
+    </div>
+  </nav>  
+
   <div class="container">
 
-    <h1>4. A - Kastrupgaardsskolen</h1>
-
-    <p>Velkommen til en samling af opgaver og links til gavn for eleverne i 4.a på Kastrupgaardsskolen.</p>
+    <p></p>
+    
 
     <!-- uge 14 -->
     <div class="row">
