--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
                 begge steder bruger du dit uni-login.
               </p>
               <p>
-                Skriveøvelser, skrivhurtigt og læsning.
-              </p>
+                Skriveøvelser, <a href="https://www.skrivhurtigt.dk/" target="_new">skrivhurtigt</a> og læsning.
+              </p>              
               <p><a href="files/Oversigt_uge_14_og_15.pdf" target="_new">Her er vedhæftet en oversigt</a> over de 7
                 hjemmeskoledage i dansk og n/t i perioden d. 30.3 til d. 7.4.
                 Opgaverne ligger også på minuddannelse og kan besvares der.
